# finazon-grpc-python

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt
examples/: README.md  tickers.py  time_series.py
finazon_grpc_python/: api_usage_pb2.py  api_usage_pb2.pyi  api_usage_pb2_grpc.py  api_usage_service.py  benzinga_pb2.py  benzinga_pb2.pyi  benzinga_pb2_grpc.py  benzinga_service.py  binance_pb2.py  binance_pb2.pyi  binance_pb2_grpc.py  binance_service.py  crypto_pb2.py  crypto_pb2.pyi  crypto_pb2_grpc.py  crypto_service.py  datasets_pb2.py  datasets_pb2.pyi  datasets_pb2_grpc.py  datasets_service.py  exchange_pb2.py  exchange_pb2.pyi  exchange_pb2_grpc.py  exchange_service.py  forex_pb2.py  forex_pb2.pyi  forex_pb2_grpc.py  forex_service.py  publishers_pb2.py  publishers_pb2.pyi  publishers_pb2_grpc.py  publishers_service.py  sec_pb2.py  sec_pb2.pyi  sec_pb2_grpc.py  sec_service.py  sip_pb2.py  sip_pb2.pyi  sip_pb2_grpc.py  sip_service.py  (+16 more)
finazon_grpc_python/common/: client.py  errors.py  settings.py  utils.py
finazon_grpc_python/examples/: indicator_atr.py  indicator_ma.py  indicator_ma_pandas.py  tickers.py  time_series.py  time_series_pandas.py
proto/finazon_grpc_python/: api_usage.proto  benzinga.proto  binance.proto  crypto.proto  datasets.proto  exchange.proto  forex.proto  publishers.proto  sec.proto  sip.proto  snapshot.proto  tickers.proto  time_series.proto  trade.proto
tools/service_generator/: generator.py  proto_parser.py
tools/service_generator/templates/: service_template.jinja
